// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<button
  class="flex flex-col justify-center  min-w-[110px] items-center"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-bg-gray flex items-center justify-center text-secondary-gray material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-sm font-normal text-primary-gray"
  >
    Default
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<button
  class="flex flex-col justify-center  min-w-[110px] items-center"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-bg-gray flex items-center justify-center text-secondary-gray material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-sm font-normal text-primary-gray"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<button
  class="flex flex-col justify-center  min-w-[110px] items-center"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-accent flex items-center justify-center text-white material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-sm font-normal text-accent"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<button
  class="flex flex-col justify-center  min-w-[110px] items-center"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-accent flex items-center justify-center text-white material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-sm font-normal text-accent"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > selected 1`] = `
<button
  class="flex flex-col justify-center  min-w-[110px] items-center"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-accent flex items-center justify-center text-white material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-sm font-normal text-accent"
  >
    Selected
  </span>
</button>
`;
